<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Nota"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/nota_titolo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/Titolo"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Dettaglio"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/nota_dettaglio"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/Dettaglio_nota"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data_creazione"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/data_creazione"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:editable="false"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

    <Button
        android:id="@+id/crea_nota_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/salva_nota_button"/>


</LinearLayout>